--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col">
-            <h1 class="text-center text-white">Empire Liquor store</h1>
+            <h1 class="text-center text-white"><u>Empire Liquor store</u></h1>
         </div>
     </div>
     <div style="border:20px ; justify-content: center; align-items: center; height: 400px; width: 400px; margin: auto; border-radius: 20px; box-shadow: 10px 10px 5px black;background-image: url(db3292f0-5f6c-4f72-b243-c5592960c8fa.jpg);background-size: cover;backdrop-filter: 100%;">
         <section style="text-align: center; padding: 20px;">
-    <p id="bill" style="font-size: 20px;" class="text-danger" ><em>Your bill will appear here</em></p>
+    <p id="bill" style="font-size: 20px;" class="text-danger" ><em>Your bill will appear here.</em></p>
     <p id="message" style="font-family: cursive;font-size: large;" class="text-secondary"></p>
-    <button onclick="myBill()" class="bg-success text-white lead" style="margin:250px 40px">Start</button>
-    <button onclick="window.close()" class="bg-danger text-dark lead"style="margin:250px 40px">Exit</button>
+    <button onclick="myBill()" class="bg-success text-white lead" style="margin:250px 40px">Purchase</button>
+    <button onclick="This.close()" class="bg-danger text-dark lead"style="margin:250px 40px">Exit</button>
     <section>
     </div>
     </div>
@@ -57,4 +57,5 @@
     </main>
     
 </body>
+
 </html>
