--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p id="bill" style="font-size: 20px;" class="text-danger" ><em>Your bill will appear here.</em></p>
     <p id="message" style="font-family: cursive;font-size: large;" class="text-secondary"></p>
     <button onclick="myBill()" class="bg-success text-white lead" style="margin:250px 40px">Purchase</button>
-    <button onclick="Window.close()" class="bg-danger text-dark lead"style="margin:250px 40px" id="exit">Exit</button>
+<!--     <button onclick="Window.close()" class="bg-danger text-dark lead"style="margin:250px 40px" id="exit">Exit</button> -->
     <section>
     </div>
     </div>
@@ -53,9 +53,9 @@
             }
 
         }
-        document.getElementById("exit").addEventListener("click", () => {
-  window.close();
-});
+        // document.getElementById("exit").addEventListener("click", () => {
+  // window.close();
+// });
 
     </script>
     </main>
@@ -63,5 +63,6 @@
 </body>
 
 </html>
+
 
 
